# zrn-crm-be

./: .gitignore  INSTALL.md  add_display_name_migration.py  requirements.txt  seed_demo.py
alembic/: env.py
alembic/versions/: 02a072b19ede_add_chat_messages_table.py  0fc3a23902c7_add_file_url_to_quotes.py  1e77342ea0ae_add_subcategory_id_to_provider_services.py  2ad96a31366d_add_role_configs.py  2f75271b022a_add_notes_table.py  371385748361_add_arca_integration.py  39563962b958_add_code_to_categories.py  3e2d17bf953a_add_trade_name_to_clients.py  3e4f0482cea4_add_tax_condition_to_clients.py  3ebec826ec93_add_notes_table.py  43df0e7b48e8_add_employees_and_time_entries.py  450e6ae297c6_add_categories_families_subcategories.py  67b07bb95051_add_category_and_family_to_products.py  68b063be7baf_add_currency_to_models.py  6d12c192d1b9_add_client_id_and_contact_id_to_.py  6f72300cf49a_add_quote_id_to_invoices.py  7451b23b8005_add_email_tables.py  785b4c7f727f_add_color_code_to_invoicestatus_and_on_.py  7f3c7fe2d8d6_add_website_and_lead_id_to_calendar.py  81dde61280e2_add_user_timestamps_and_company_settings.py  850273da1825_add_lead_module.py  8957c3971604_add_quotes_module.py  979ae2c79e9d_add_clientservice_table.py  a73fdedb117b_initial_schema_users.py  c3badb8a57f5_add_core_crm_models.py  c5d38e9aeb69_replace_subcategory_id_with_product_id.py  c65346660025_add_converted_task_key_to_project_notes.py  d1db027da563_add_subcategory_to_products.py  (+8 more)
app/: database.py  main.py
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: lib.rs
scripts/: backup.sh
(+176 files in other folders)
