[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
argon2 = "0.5"
bcrypt = "0.17"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ammonia = "4"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
regex = "1"
